# replikant

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/replikant/: __main__.py  database.py  extensions.py  main.py  utils.py
src/replikant/activities/auth_by_invitation/: __init__.py  model.py  provider.py
src/replikant/activities/auth_by_invitation/templates/: default.tpl  legal.tpl
src/replikant/activities/auth_by_invitation/templates/admin/: config.tpl  panel.tpl  pending.tpl  send_invitation.tpl
src/replikant/activities/email_auth/: __init__.py  model.py  provider.py
src/replikant/activities/email_auth/templates/: default.tpl
src/replikant/activities/form/: __init__.py
src/replikant/activities/form/model/: Form.py  __init__.py
src/replikant/activities/form/templates/: dynamic_form.tpl
src/replikant/activities/page/: __init__.py
src/replikant/activities/page/templates/: default.tpl
src/replikant/activities/prolific_auth/: __init__.py  model.py  provider.py
src/replikant/activities/prolific_auth/templates/: default.tpl
src/replikant/activities/section_summary/: __init__.py
src/replikant/activities/section_summary/templates/: default.tpl
src/replikant/activities/task/: __init__.py  model.py
src/replikant/activities/task/src/: __init__.py  system.py  task.py
src/replikant/activities/task/src/selection_strategy/: __init__.py  core.py  latin_square.py  least_seen.py
src/replikant/activities/task/templates/: mushra.tpl  rpt.tpl
src/replikant/activities/task/templates/players/default/: controls.js  player.html
src/replikant/admin_units/export_bdd/: __init__.py
src/replikant/admin_units/export_bdd/templates/: index.tpl
src/replikant/admin_units/panel/: __init__.py  provider.py
src/replikant/admin_units/panel/templates/: default.tpl  panels.tpl
src/replikant/core/: __init__.py  admin_scope.py  config.py  core.py  error.py  participant_scope.py  scope.py
src/replikant/core/providers/: __init__.py  auth.py  base.py  content.py
src/replikant/templates/: auth_failed.tpl  error.tpl
(+2 files in other folders)
